// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField render() renders with form context 1`] = `
<div>
  <form
    class="form-stacked css-1z07nlv-StyledForm e1t9al3x0"
  >
    <div
      class="control-group"
    >
      <div
        class="controls"
      >
        <input
          class="form-control"
          id="id-fieldName"
          name="fieldName"
          type="text"
          value="fieldValue"
        />
      </div>
    </div>
    <div
      class="form-actions align-right"
      style="margin-top: 25px;"
    >
      <button
        aria-disabled="false"
        aria-label="Save Changes"
        class="css-zbzvlb-StyledButton-getColors-getButtonStyles e1b8u3ky2"
        role="button"
        type="submit"
      >
        <span
          class="css-at526y-InteractionStateLayer-InteractionStateLayer-InteractionStateLayer e1fwp9rx0"
          role="presentation"
        />
        <span
          class="css-1z0n9wg-ButtonLabel e1b8u3ky1"
        >
          Save Changes
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`TextField render() renders without form context 1`] = `
<div>
  <div
    class="control-group"
  >
    <div
      class="controls"
    >
      <input
        class="form-control"
        id="id-fieldName"
        name="fieldName"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
